# automatons

./: .yamllint.yml  Cargo.toml  README.md
.github/: funding.yml  labels.yml
.github/workflows/: deploy-staging.yml  push-rust.yml  release-automatons-github.yml  release-automatons.yml
automaton/: Cargo.toml
automaton-github/: Cargo.toml
automaton-github/src/: lib.rs  macros.rs
automaton-github/src/resource/: mod.rs
automaton/src/: error.rs  lib.rs  state.rs  task.rs
automaton/tests/: hello-world.rs
automatons/: Cargo.toml
automatons-github/: Cargo.toml
automatons-github/src/: lib.rs  macros.rs
automatons-github/src/client/: error.rs  macros.rs  mod.rs  token.rs
automatons-github/src/event/: check_run.rs  mod.rs
automatons-github/src/resource/: account.rs  app.rs  check_suite.rs  installation.rs  license.rs  mod.rs  organization.rs  repository.rs  visibility.rs
automatons-github/src/resource/check_run/: conclusion.rs  mod.rs  output.rs  status.rs
automatons-github/src/resource/pull_request/: branch.rs  mod.rs
automatons-github/src/resource/repository/: minimal.rs  mod.rs
automatons-github/src/task/: list_check_suites.rs  mod.rs
automatons-github/src/testing/: mod.rs
automatons-github/tests/fixtures/event/: check_run.completed.json
automatons-github/tests/fixtures/resource/: check_run.json  check_suite.json  installation.json
automatons-ingress-github/: Cargo.toml  buildspec.yml
automatons-ingress-github/src/: main.rs
automatons/src/: engine.rs  error.rs  lib.rs  state.rs  task.rs
automatons/src/configuration/: mod.rs  v1.rs
automatons/src/steps/: example.rs  mod.rs
automatons/src/task/: mod.rs
automatons/tests/: hello-world.rs
integrations/github/: Cargo.toml
integrations/github/src/: lib.rs  macros.rs
integrations/github/src/client/: error.rs  mod.rs  token.rs
integrations/github/src/event/: mod.rs
integrations/github/src/resource/: app.rs  check_suite.rs  file.rs  git.rs  installation.rs  mod.rs
integrations/github/src/resource/check_run/: conclusion.rs  mod.rs  status.rs
integrations/github/src/resource/check_suite/: minimal.rs  mod.rs
integrations/github/src/resource/repository/: minimal.rs  mod.rs
integrations/github/src/task/: create_check_run.rs  get_file.rs  list_check_runs_for_check_suite.rs  list_check_runs_for_git_sha.rs  list_check_suites.rs  mod.rs  update_check_run.rs
integrations/github/src/testing/: check_run.rs  client.rs  contents.rs  mod.rs
integrations/github/tests/fixtures/resource/: app.json  license.json  organization.json  pull_request.json  repository.json
runtime/ingress/: Cargo.toml  README.md
runtime/ingress/src/: error.rs  github.rs  lib.rs
runtime/ingress/tests/: github.rs  health.rs
