[package]
name = "automatons-github"
version = "0.0.0"
edition = "2021"

repository = "https://github.com/devxbots/automatons"
license = "MIT or Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# automaton-github is currently in a prototyping phase, during which we won't
# release it to crates.io yet.
publish = false

[features]
serde = ["dep:serde", "dep:serde_json", "url/serde"]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.141", features = ["derive"], optional = true }
serde_json = { version = "1.0.83", optional = true }
tracing = { version = "0.1.36", optional = true }
url = "2.2.2"
