[package]
name = "automatons-github"
version = "0.0.0"
edition = "2021"

description = "GitHub integration for the automatons framework"
repository = "https://github.com/devxbots/automatons"
license = "MIT OR Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

[features]
serde = ["dep:serde", "dep:serde_json", "url/serde"]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.141", features = ["derive"], optional = true }
serde_json = { version = "1.0.83", optional = true }
tracing = { version = "0.1.36", optional = true }
url = "2.2.2"
