[package]
name = "automatons-github"
version = "0.1.0"
edition = "2021"

description = "GitHub integration for the automatons framework"
repository = "https://github.com/devxbots/automatons"
license = "MIT OR Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

[features]
client = [
    "dep:anyhow",
    "dep:jsonwebtoken",
    "dep:parking_lot",
    "dep:reqwest",
    "dep:secrecy",
    "dep:thiserror",
    "serde",
]
serde = [
    "dep:serde",
    "dep:serde_json",
    "chrono/serde",
    "url/serde",
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.60", optional = true }
chrono = "0.4.19"
jsonwebtoken = { version = "8.1.1", optional = true }
parking_lot = { version = "0.12.1", optional = true }
reqwest = { version = "0.11.11", optional = true, features = ["json"] }
secrecy = { version = "0.8.0", optional = true }
serde = { version = "1.0.141", optional = true, features = ["derive"] }
serde_json = { version = "1.0.83", optional = true }
thiserror = { version = "1.0.32", optional = true }
tracing = { version = "0.1.36", optional = true }
url = "2.2.2"

[dev-dependencies]
mockito = "0.31.0"
tokio = { version = "1.20.1", features = ["full"] }
