[package]
name = "automatons"
version = "0.0.0"
edition = "2021"

repository = "https://github.com/devxbots/automatons"
license = "MIT or Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# automatons is currently in a prototyping phase, during which we won't release
# it to crates.io yet.
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
