[package]
name = "automatons"
version = "0.1.0"
edition = "2021"

description = "Automation framework for software developers"
repository = "https://github.com/devxbots/automatons"
license = "MIT OR Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
async-trait = "0.1.57"
thiserror = "1.0.31"
tracing = { version = "0.1.36", optional = true }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
