[package]
name = "automatons-github"
version = "0.1.0"
edition = "2021"

description = "GitHub integration for the automatons framework"
repository = "https://github.com/devxbots/automatons"
license = "MIT OR Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.60" }
async-trait = "0.1.57"
automatons = { path = "../../automatons", version = "0.1.0" }
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = { version = "8.1.1" }
parking_lot = { version = "0.12.1" }
reqwest = { version = "0.11.11", features = ["json"] }
secrecy = { version = "0.8.0" }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = { version = "1.0.83" }
thiserror = { version = "1.0.32" }
tracing = { version = "0.1.36", optional = true }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
mockito = "0.31.0"
tokio = { version = "1.20.1", features = ["full"] }
