[package]
name = "automatons-github"
version = "0.2.0"
edition = "2021"

description = "GitHub integration for the automatons framework"
repository = "https://github.com/devxbots/automatons"
license = "MIT OR Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.automatons]
path = "../../automatons"
version = "0.2"
features = ["reqwest"]

[dependencies]
anyhow = { version = "1" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.24"
jsonwebtoken = { version = "8" }
parking_lot = { version = "0.12" }
reqwest = { version = "0.11", features = ["json"] }
secrecy = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "1" }
tracing = { version = "0.1", optional = true }
url = { version = "2", features = ["serde"] }
base64 = "0.13.0"
serde_bytes = "0.11.7"

[dev-dependencies]
mockito = "0.31.0"
tokio = { version = "1.20.1", features = ["full"] }
