[package]
name = "automatons-ingress-github"
version = "0.0.0"
edition = "2021"

description = "Ingress for events from GitHub"
repository = "https://github.com/devxbots/automatons"
license = "MIT OR Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = { version = "0.6.0", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.6.0"
tokio = { version = "1.20.1", features = ["macros"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt"] }
