[package]
name = "automatons-aws-ingress"
version = "0.0.0"
edition = "2021"

description = "Ingress gateway for the AWS runtime"
repository = "https://github.com/devxbots/automatons"
license = "MIT OR Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# We don't distribute the AWS runtime while it is under active development. Once
# its features are stabilized, we can consider how to package and distribute it
# to users.
publish = false

[[bin]]
name = "ingress"

[dependencies]
anyhow = "1.0.65"
automatons-github = { version = "0.1.0", path = "../../integrations/github" }
axum = "0.6.0-rc.2"
hex = "0.4.3"
hmac = "0.12.1"
hyper = "0.14.20"
secrecy = "0.8.0"
serde_json = "1.0.85"
sha2 = "0.10.6"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.11"
